# OS-lab3

./: CMakeLists.txt
include/: marker_thread.h
src/: main.cpp  marker_thread.cpp  thread_functions.cpp
tests/: test.cpp  test_threads.cpp
